kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Hubble"
  name: hubble-ui
  namespace: kube-system
spec:
  hostnames: ["hubble.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
